--- a/inline-translation/css/custom.css
+++ b/inline-translation/css/custom.css
@@ -178,14 +178,32 @@ iframe.translator-untranslatable {
     cursor: help;
 }
 
+/* Hide visually but not from screen readers */
+.ui-helper-hidden-accessible {
+	border: 0;
+	clip: rect(1px, 1px, 1px, 1px);
+	-webkit-clip-path: inset(50%);
+	clip-path: inset(50%);
+	height: 1px;
+	margin: -1px;
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
+	width: 1px;
+	word-wrap: normal !important;
+}
+
 .ui-tooltip {
 	background-color: #eee;
 	margin: 2px;
 	padding: 6px;
 	text-align: left;
-	max-width: 250px;
+	max-width: 30em;
 	z-index: 999999999 !important;
 	border-radius: 10px;
+	position: absolute;
+	top: 100px;
+	left: 100px;
 }
 
 .ui-tooltip ul {
